# vs-local

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cli/: continue_config.py  detect.py  firewall.py  lmstudio.py  main.py  models.py  ollama.py  verify.py
config/continue/: config.json
docs/: ARCHITECTURE.md  LM_STUDIO.md  MODELS.md  QUICKSTART.md  REVIEW.md  RUNTIMES.md  SECURITY.md  TROUBLESHOOTING.md  local-llm-models-summary.md  mlx-vs-ollama-overview.md
examples/: 01_code_generation.md  02_refactoring.md  03_code_review.md  04_test_generation.md  prompts.md
examples/sample_app/: app.py
examples/sample_app/tests/: test_app.py
security/: iptables_rules.sh  pf_rules.conf  verify_no_network.py  windows_firewall.ps1
tests/: test_continue_config.py  test_detect.py  test_ollama.py  test_verify.py
