[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs-local"
version = "0.1.0"
description = "vs-local: local LLM for VS Code - zero external network calls"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
